data/benign/benign_C/c_stackoverflow_gcc_pragma__error__expected_expression_before___pr_79797938.txt
#include <stdio.h>

// Compile with:
// gcc -g -o myprogram main.c

//#define SPECIAL

typedef struct {
  int id;
  char name[50];
  float value;
} MyStruct;

MyStruct example = {
  #ifdef SPECIAL
  .id = 43,
  #else
  #pragma message("Hello from structure")
  .id = 42,
  #endif
  .name = "Example Name",
  .value = 3.14f,
};

int main() {
  printf("ID: %d\n", example.id);

  return 0;
}

# --- New Code Block --- 

$  gcc -g -o myprogram main.c && ./myprogram
main.c:18:11: error: expected expression before ‘#pragma’
   18 |   #pragma message("Hello from structure")
      |           ^~~~~~~

# --- New Code Block --- 

$  gcc --version | head -1
gcc (Ubuntu 11.4.0-1ubuntu1~22.04.2) 11.4.0